Add Open Graph meta tags and og-image for social sharing

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,17 @@
       name="description"
       content="Live UK rail departure boards with weather information"
     />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="UK Rail Departures & Weather" />
+    <meta property="og:description" content="Live UK train departures and weather for your nearest stations." />
+    <meta property="og:image" content="https://mikaleppala.github.io/uk-rail-departures/og-image.png" />
+    <meta property="og:url" content="https://mikaleppala.github.io/uk-rail-departures/" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="UK Rail Departures & Weather" />
+    <meta name="twitter:description" content="Live UK train departures and weather for your nearest stations." />
+    <meta name="twitter:image" content="https://mikaleppala.github.io/uk-rail-departures/og-image.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
